--- a/index.html
+++ b/index.html
@@ -163,8 +163,10 @@
     <form class="form-container" onsubmit="return goToGamePage();">
 
       <select name="games" id="games">
-
-        <option value="game001" selected>選擇題</option>
+        <option value="作業一" selected >作業一</option>
+        <option value="作業二">作業二</option>
+        <option value="作業三">作業三</option>
+        <option value="game001" >選擇題</option>
         <option value="game002">文意選填</option>
         <option value="game003">卡牌配對</option>
         <option value="game004">核取方塊</option>
