--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
         <option value="game006">leaflet</option>
         <option value="game007">星空動畫</option>
         <option value="game008">總測驗</option>
+        <option value="game009">game009</option>
 
       </select>
 
