--- a/game009.html
+++ b/game009.html
@@ -13,7 +13,7 @@
             height: 100%;
             width: 100%;
             overflow: hidden;
-            background-color: #ffffff;
+            background-color: #0f304f;
 
 
 
@@ -29,28 +29,51 @@
             max-height: 100vh;
             max-width: 177.77vh;
             /* 不一定需要，可刪 看要不要全螢幕*/
-            /* 16 / 9 */
-            background-color: rgb(194, 129, 101);
+
+            /* background-color: #0f304f; */
             overflow: hidden;
+
+            z-index: 950;
 
 
 
         }
 
 
-        /* 測試中 灰色的前景*/
-        /* #bg {
-            position: absolute  ;
-            width: 100%;
-            height: 100%;
-            background-image: url('image/1.png');
-            background-size: cover;
-            background-position: center;
+        /* 太空艙*/
+        #bg {
+            position: absolute;
+            top: 53%;
+            left: 51%;
+            transform: translate(-50%, -50%);
+            width: 125%;
+            height: 125%;
+            background-image: url('image/太空艙.svg');
+            background-size: contain;
+
             background-repeat: no-repeat;
 
             pointer-events: none;
-            z-index: 09999;
-        } */
+            z-index: 1000;
+        }
+
+        /* 背景星星*/
+        #starbg {
+            position: absolute;
+            top: 57%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 125%;
+            height: 125%;
+            background-image: url('image/星空.jpg');
+            background-size: cover;
+
+            background-repeat: no-repeat;
+            opacity: 0.4;
+
+            pointer-events: none;
+            z-index: 900;
+        }
 
 
         /* 放所有文物圖片的容器，設為相對定位 */
@@ -59,6 +82,15 @@
             position: fixed;
             width: 100%;
             height: 100%;
+            z-index: 1000;
+            /*可能要刪掉的代碼*/
+            /*可能要刪掉的代碼*/
+            /*可能要刪掉的代碼*/
+            /*可能要刪掉的代碼*/
+            /*可能要刪掉的代碼*/
+            /*可能要刪掉的代碼*/
+            /*可能要刪掉的代碼*/
+            /*可能要刪掉的代碼*/
 
 
         }
@@ -86,7 +118,7 @@
 
             /* position: absolute; */
             position: fixed;
-            bottom: 2%;
+            bottom: 1%;
             left: 50%;
             transform: translateX(-50%);
 
@@ -96,7 +128,7 @@
             line-height: 1.4em;
 
             color: #ffffff;
-            background-color: #c2c5a0;
+            background-color: #98bbc8f0;
             padding-left: 3%;
             padding-top: 1%;
             border-radius: 2vh;
@@ -125,6 +157,7 @@
             background: none;
             padding: 0;
             border: none;
+            z-index: 970;
         }
 
         /* 原始背景 */
@@ -212,7 +245,7 @@
             width: 100vw;
             height: 100vh;
             background-color: rgba(0, 0, 0, 0.6);
-            z-index: 800;
+            z-index: 960;
         }
 
         #result-message {
@@ -250,46 +283,175 @@
         .svg-button:hover {
             transform: scale(1.05);
         }
+
+        .review-reminder {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 6rem;
+            font-weight: bold;
+            background-color: #fff;
+            padding: 1rem 2rem;
+            border-radius: 12px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+            opacity: 0;
+            z-index: 1000;
+            pointer-events: none;
+            Letter-spacing: 0.5em;
+            text-align: center;
+        }
+
+        .review-reminder.show {
+            animation: fadeUp 1.5s ease forwards;
+        }
+
+        @keyframes fadeUp {
+            0% {
+                opacity: 0;
+                transform: translate(-50%, -50%) scale(0.9);
+            }
+
+            30% {
+                opacity: 1;
+                transform: translate(-50%, -60%) scale(1);
+            }
+
+            70% {
+                opacity: 1;
+                transform: translate(-50%, -60%) scale(1);
+            }
+
+            100% {
+                opacity: 0;
+                transform: translate(-50%, -70%) scale(0.95);
+            }
+        }
+
+        .hidden {
+            display: none;
+        }
+
+        #credits-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: black;
+            color: white;
+            display: none;
+            z-index: 9999;
+            overflow: hidden;
+            text-align: center;
+            font-family: "Helvetica Neue", sans-serif;
+            padding-top: 100%;
+        }
+
+        .scrolling-text {
+            animation: scroll-up 30s linear forwards;
+            font-size: 1.5em;
+            line-height: 2em;
+            position: absolute;
+            top: 30%;
+            /* ← 從底部剛好進入畫面 */
+            width: 100%;
+            transform: translateY(0%);
+        }
+
+        @keyframes scroll-up {
+            from {
+                transform: translateY(0%);
+            }
+
+            to {
+                transform: translateY(-250%);
+            }
+        }
+
+        
     </style>
 </head>
 
+
+
+
 <body>
+    <div id="reviewReminder" class="review-reminder hidden">錯題重練</div>
+    <div id="starbg"></div>
+    <div id="bg"></div>
 
     <div id="game-container">
+
         <!-- <div id="bg"></div>灰色的前景 -->
         <div id="artifacts-container"></div>
 
-
-
-        <!-- 確認彈窗 -->
-        <div id="confirm-modal">
-            <img src="image/select.svg" class="modal-bg">
-            <img src="image/correct.svg" class="modal-bg-correct">
-            <img src="image/wrong.svg" class="modal-bg-wrong">
-
-            <div id="selected-image-container"></div>
-            <div class="button-group">
-                <img id="confirmtButton" src="image/confirmtbutton.svg" class="svg-button">
-                <img id="cancelButton" src="image/cancelbutton.svg" class="svg-button">
-
-                <img id="correctNextButton" src="image/correctnextbutton.svg" class="svg-button next-button"
-                    style="display: none;" alt="正確繼續">
-                <img id="wrongNextButton" src="image/wrongnextbutton.svg" class="svg-button next-button"
-                    style="display: none;" alt="錯誤繼續">
-            </div>
-
-        </div>
-
-        <!-- 題目 -->
-        <div class="hints">
-            <p id="hint1">1. 這是必要留著的</p>
-            <p id="hint2">2. 只是宣告空間</p>
-            <p id="hint3">3. 本體在下面</p>
-        </div>
-        <!-- 遮罩 -->
-        <div id="overlay"></div>
-
     </div><!--game-container尾標 -->
+
+    <!-- 確認彈窗 -->
+    <div id="confirm-modal">
+        <img src="image/select.svg" class="modal-bg">
+        <img src="image/correct.svg" class="modal-bg-correct">
+        <img src="image/wrong.svg" class="modal-bg-wrong">
+
+        <div id="selected-image-container"></div>
+        <div class="button-group">
+            <img id="confirmtButton" src="image/confirmtbutton.svg" class="svg-button">
+            <img id="cancelButton" src="image/cancelbutton.svg" class="svg-button">
+
+            <img id="correctNextButton" src="image/correctnextbutton.svg" class="svg-button next-button"
+                style="display: none;" alt="正確繼續">
+            <img id="wrongNextButton" src="image/wrongnextbutton.svg" class="svg-button next-button"
+                style="display: none;" alt="錯誤繼續">
+        </div>
+
+    </div>
+
+    <!-- 遮罩 -->
+    <div id="overlay"></div>
+    <!-- 題目 -->
+    <div class="hints">
+        <p id="hint1">1. 這是必要留著的</p>
+        <p id="hint2">2. 只是宣告空間</p>
+        <p id="hint3">3. 本體在下面</p>
+    </div>
+
+
+    <!-- 結尾動畫 -->
+    <div id="credits-screen">
+        <div class="scrolling-text">
+            <h2>感謝遊玩！</h2>
+            <p>遊戲設計：你自己</p>
+            <p>程式撰寫：你未來的自己</p>
+            <p>SVG 美術：一些 AI 和 Illustrator</p>
+            <p>特別感謝：媽媽、老師、貓</p>
+            <p>還有你，最棒的玩家！</p>
+            <p>期待下次再見～</p>
+            <h2>感謝遊玩！</h2>
+            <p>遊戲設計：你自己</p>
+            <p>程式撰寫：你未來的自己</p>
+            <p>SVG 美術：一些 AI 和 Illustrator</p>
+            <p>特別感謝：媽媽、老師、貓</p>
+            <p>還有你，最棒的玩家！</p>
+            <p>期待下次再見～</p>
+            <h2>感謝遊玩！</h2>
+            <p>遊戲設計：你自己</p>
+            <p>程式撰寫：你未來的自己</p>
+            <p>SVG 美術：一些 AI 和 Illustrator</p>
+            <p>特別感謝：媽媽、老師、貓</p>
+            <p>還有你，最棒的玩家！</p>
+            <p>期待下次再見～</p>
+        </div>
+
+    </div>
+
+
+
+
+
+
+
+
     <script>
 
         let currentQuestion = 0;
@@ -298,14 +460,14 @@
                 hints: ['1. 台灣水鹿', '2. 台灣水鹿', '3. 台灣水鹿'],
                 artifacts: [
                     { id: 1, src: 'image/台灣藍鵲.svg', isAnswer: false, top: '15%', left: '62%' },
-                    { id: 2, src: 'image/香魚.svg', isAnswer: false, top: '40%', left: '60%' },
+                    { id: 2, src: 'image/五色鳥.svg', isAnswer: false, top: '40%', left: '60%' },
                     { id: 3, src: 'image/泰雅族貝珠裙.svg', isAnswer: false, top: '48%', left: '30%' },
                     { id: 4, src: 'image/硫磺.svg', isAnswer: false, top: '50%', left: '80%' },
                     { id: 5, src: 'image/雲豹.svg', isAnswer: false, top: '30%', left: '75%' },
                     { id: 6, src: 'image/黑長尾雉.svg', isAnswer: false, top: '62%', left: '65%' },
                     { id: 7, src: 'image/寬尾鳳蝶.svg', isAnswer: false, top: '28%', left: '16%' },
                     { id: 8, src: 'image/龍宮翁戎螺.svg', isAnswer: false, top: '20%', left: '35%' },
-                    { id: 9, src: 'image/賽夏族貝珠踝飾.svg', isAnswer: false, top: '60%', left: '19%' },
+                    { id: 9, src: 'image/熊鷹.svg', isAnswer: false, top: '60%', left: '19%' },
                     { id: 10, src: 'image/台灣水鹿.svg', isAnswer: true, top: '45%', left: '45%' }
                 ]
             },
@@ -313,14 +475,14 @@
                 hints: ['1. 龍宮翁戎螺', '2. 龍宮翁戎螺', '3. 龍宮翁戎螺'],
                 artifacts: [
                     { id: 1, src: 'image/台灣藍鵲.svg', isAnswer: false, top: '15%', left: '62%' },
-                    { id: 2, src: 'image/香魚.svg', isAnswer: false, top: '40%', left: '60%' },
+                    { id: 2, src: 'image/五色鳥.svg', isAnswer: false, top: '40%', left: '60%' },
                     { id: 3, src: 'image/泰雅族貝珠裙.svg', isAnswer: false, top: '48%', left: '30%' },
                     { id: 4, src: 'image/硫磺.svg', isAnswer: false, top: '50%', left: '80%' },
                     { id: 5, src: 'image/雲豹.svg', isAnswer: false, top: '30%', left: '75%' },
                     { id: 6, src: 'image/黑長尾雉.svg', isAnswer: false, top: '62%', left: '65%' },
                     { id: 7, src: 'image/寬尾鳳蝶.svg', isAnswer: false, top: '28%', left: '16%' },
                     { id: 8, src: 'image/龍宮翁戎螺.svg', isAnswer: true, top: '20%', left: '35%' },
-                    { id: 9, src: 'image/賽夏族貝珠踝飾.svg', isAnswer: false, top: '60%', left: '19%' },
+                    { id: 9, src: 'image/熊鷹.svg', isAnswer: false, top: '60%', left: '19%' },
                     { id: 10, src: 'image/台灣水鹿.svg', isAnswer: false, top: '45%', left: '45%' }
                 ]
             },
@@ -328,14 +490,14 @@
                 hints: ['1. 寬尾鳳蝶', '2. 寬尾鳳蝶', '3. 寬尾鳳蝶'],
                 artifacts: [
                     { id: 1, src: 'image/台灣藍鵲.svg', isAnswer: false, top: '15%', left: '62%' },
-                    { id: 2, src: 'image/香魚.svg', isAnswer: false, top: '40%', left: '60%' },
+                    { id: 2, src: 'image/五色鳥.svg', isAnswer: false, top: '40%', left: '60%' },
                     { id: 3, src: 'image/泰雅族貝珠裙.svg', isAnswer: false, top: '48%', left: '30%' },
                     { id: 4, src: 'image/硫磺.svg', isAnswer: false, top: '50%', left: '80%' },
                     { id: 5, src: 'image/雲豹.svg', isAnswer: false, top: '30%', left: '75%' },
                     { id: 6, src: 'image/黑長尾雉.svg', isAnswer: false, top: '62%', left: '65%' },
                     { id: 7, src: 'image/寬尾鳳蝶.svg', isAnswer: true, top: '28%', left: '16%' },
                     { id: 8, src: 'image/龍宮翁戎螺.svg', isAnswer: false, top: '20%', left: '35%' },
-                    { id: 9, src: 'image/賽夏族貝珠踝飾.svg', isAnswer: false, top: '60%', left: '19%' },
+                    { id: 9, src: 'image/熊鷹.svg', isAnswer: false, top: '60%', left: '19%' },
                     { id: 10, src: 'image/台灣水鹿.svg', isAnswer: false, top: '45%', left: '45%' }
                 ]
             },
@@ -419,7 +581,7 @@
 
             selectedImageContainer.innerHTML = '';
             document.querySelector('.modal-bg').style.display = 'none';
-            
+
             if (isCorrect) {
                 document.querySelector('.modal-bg-correct').style.display = 'block';
             } else {
@@ -445,8 +607,29 @@
             selectedArtifact = null;
         });
 
+        function showReviewReminder() {
+            const reminder = document.getElementById("reviewReminder");
+            reminder.classList.remove("hidden");
+            reminder.classList.add("show");
+
+            // 等動畫結束後再隱藏（1.5 秒後）
+            setTimeout(() => {
+                reminder.classList.remove("show");
+                reminder.classList.add("hidden");
+            }, 1500);
+        }
+
+        function showCredits() {
+            const screen = document.getElementById("credits-screen");
+            screen.style.display = "block";
+        }
+
+
+
         correctNextButton.addEventListener('click', goToNextQuestion);
         wrongNextButton.addEventListener('click', goToNextQuestion);
+
+        let hasShownReviewReminder = true;  //讓錯題重練的提示只出現一次，不知道為什麼要宣告在這裡，不能宣告在function中
 
         function goToNextQuestion() {
             overlay.style.display = 'none';
@@ -454,6 +637,8 @@
             selectedArtifact = null;
 
             currentQuestion++;
+
+
 
             if (currentQuestion < currentQuestionList.length) {
                 loadQuestion(currentQuestion);
@@ -464,10 +649,16 @@
                     wrongQuestions = [];
                     currentQuestion = 0;
                     loadQuestion(currentQuestion);
+                    if (hasShownReviewReminder) {
+                        showReviewReminder(); // 執行動畫
+                        hasShownReviewReminder = false; // 設為已執行過
+                    }
+
                 } else {
                     // 全部答對，遊戲結束
-                    alert('恭喜！全部完成了！');
+                    // alert('恭喜！全部完成了！');
                     // 你也可以在這裡加上自訂動畫或跳轉頁面
+                    showCredits();
                 }
             }
         }
