--- a/game009.html
+++ b/game009.html
@@ -22,6 +22,10 @@
             letter-spacing: 1px;
             margin: 0;
             padding: 0;
+            width: min(100vw, 200vh);
+            height: min(50vw, 100vh);
+            min-width: 500px;
+
             overflow: hidden;
             background-color: #000000;
 
