--- a/game009.html
+++ b/game009.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>總ek7qu4</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Noto+Serif+TC:wght@200..900&display=swap"
         rel="stylesheet">
-    <title>總ek7qu4</title>
     <style>
         html,
         body {
@@ -25,10 +25,8 @@
             width: min(100vw, 200vh);
             height: min(50vw, 100vh);
             min-width: 500px;
-
             overflow: hidden;
             background-color: #000000;
-
         }
 
         .center-wrapper {
@@ -196,7 +194,6 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-
         }
 
         #again {
@@ -216,7 +213,6 @@
             left: 50%;
             transform: translate(-50%, -50%);
             width: 50vw;
-
             aspect-ratio: 16 / 9;
             z-index: 1000;
             background: none;
@@ -243,44 +239,8 @@
             pointer-events: auto;
         }
 
-        .modal-bg-correct {
-            display: none;
-            position: absolute;
-            transform: translate(-50%, -50%);
-            top: 50%;
-            left: 50%;
-            width: 170%;
-            height: 170%;
-            object-fit: contain;
-            pointer-events: none;
-            z-index: -1;
-            user-select: none;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            -webkit-user-drag: none;
-            pointer-events: auto;
-        }
-
-        .modal-bg-wrong {
-            display: none;
-            position: absolute;
-            transform: translate(-50%, -50%);
-            top: 50%;
-            left: 50%;
-            width: 170%;
-            height: 170%;
-            object-fit: contain;
-            pointer-events: none;
-            z-index: -1;
-            user-select: none;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            -webkit-user-drag: none;
-            pointer-events: auto;
-        }
-
+        .modal-bg-correct,
+        .modal-bg-wrong,
         .modal-bg-finish {
             display: none;
             position: absolute;
@@ -307,7 +267,6 @@
             width: 55%;
             top: 15%;
             left: 50%;
-
             user-select: none;
             -webkit-user-select: none;
             -moz-user-select: none;
